<resources>
    <string name="app_name">Archaeological-Fieldwork</string>
    <string name="select_image">Select Image</string>
    <string name="gender_girl">G</string>
    <string name="gender_man">M</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_register">Register</string>
    <string name="title_activity_register">Register</string>
    <string name="bottom_nav_discover">Discover</string>
    <string name="bottom_nav_map">Map</string>
    <string name="bottom_nav_favorites">Favorites</string>
    <string name="bottom_nav_profile">Profile</string>
    <string name="favorite">Favorite</string>
    <string name="visited">Visited</string>
    <string name="details">Details</string>
    <string name="title_activity_maps">Map</string>
    <string name="on_the_map">On the map</string>
    <string name="images">Images</string>
    <string name="your_notes">Your notes</string>
    <string name="register_hint_e_mail">E-mail*</string>
    <string name="register_hint_name">Name*</string>
    <string name="register_hint_password">Passwort*</string>
    <string name="edit_site_name_hint">Name*</string>
    <string name="edit_site_description_hint">Description*</string>
    <string name="edit_site_notes_hint">Notes</string>
    <string name="menu_save">Save</string>
    <string name="delete_site">Delete Site</string>
    <string name="map_card_name">Site Name</string>
    <string name="profile_btn_update">Update</string>
    <string name="profile_total_favorites">Total Favorites</string>
    <string name="profile_average_vote">Average Vote</string>
    <string name="profile_total_voted">Total Voted</string>
    <string name="profile_total_visited">Total Visited</string>
    <string name="log_out">Log out</string>
    <string name="register">Register</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="old_password">Old Password:</string>
    <string name="new_password">New Password:</string>
    <string name="repeat_new_password">Repeat new password:</string>
    <string name="old_password1">Old Password</string>
    <string name="new_password1">New Password</string>
    <string name="repeat_new_password1">Repeat New Password</string>
    <string name="titel">Project Asigmen for KAPK\nAuthor: Viktor Bilousov. \n01.21</string>
    <string name="name">Archaeological Filedworks v1.0</string>
    <string name="delete">Delete</string>
</resources>