<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.profile.show.ProfileView">

  <androidx.core.widget.NestedScrollView

      android:layout_width="0dp"
      android:layout_height="0dp"
      android:fillViewport="true"
      app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.profile.show.ProfileView">


      <ImageView
          android:id="@+id/avatar"
          android:layout_width="95dp"
          android:layout_height="84dp"
          android:layout_marginTop="30dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.04"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          tools:src="@mipmap/avatar" />


      <TextView
          android:id="@+id/textEmail"
          android:layout_width="0dp"
          android:layout_height="20dp"
          android:ems="10"
          android:hint="@string/register_hint_e_mail"
          android:inputType="textEmailAddress"
          app:layout_constraintBottom_toBottomOf="@+id/avatar"
          app:layout_constraintEnd_toEndOf="@+id/textName"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="@+id/textName" />

      <TextView
          android:id="@+id/textName"
          android:layout_width="0dp"
          android:layout_height="52dp"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:ems="10"
          android:hint="@string/register_hint_name"
          android:inputType="textEmailAddress"
          app:autoSizeTextType="uniform"
          app:autoSizeMinTextSize="12sp"
          app:autoSizeMaxTextSize="100sp"
          app:autoSizeStepGranularity="2sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@+id/avatar"
          app:layout_constraintTop_toTopOf="@+id/avatar" />

      <androidx.cardview.widget.CardView
          android:id="@+id/cardView2"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="10dp"
          android:layout_marginEnd="10dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textEmail"
          app:layout_constraintVertical_bias="0.26">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="0">

          <TableRow
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginVertical="@dimen/profile_margin_table_vert">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="@dimen/profile_font_statistic_margin_left"
                android:text="@string/profile_total_visited"
                android:textSize="@dimen/profile_font_statistic_table" />

            <TextView
                android:id="@+id/textTotalVisited"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginRight="@dimen/profile_font_statistic_margin_right"
                android:text="TextView"
                android:textSize="@dimen/profile_font_statistic_table" />
          </TableRow>

          <TableRow
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginVertical="@dimen/profile_margin_table_vert">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="@dimen/profile_font_statistic_margin_left"
                android:text="@string/profile_total_voted"
                android:textSize="@dimen/profile_font_statistic_table" />

            <TextView
                android:id="@+id/textTotalVoted"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="TextView"
                android:textSize="@dimen/profile_font_statistic_table" />
          </TableRow>

          <TableRow
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginVertical="@dimen/profile_margin_table_vert">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="@dimen/profile_font_statistic_margin_left"
                android:text="@string/profile_average_vote"
                android:textSize="@dimen/profile_font_statistic_table" />

            <TextView
                android:id="@+id/averageVote"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginRight="@dimen/profile_font_statistic_margin_right"

                android:text="TextView"
                android:textSize="@dimen/profile_font_statistic_table" />
          </TableRow>

          <TableRow
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginVertical="@dimen/profile_margin_table_vert">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="@dimen/profile_font_statistic_margin_left"
                android:text="@string/profile_total_favorites"
                android:textSize="@dimen/profile_font_statistic_table" />

            <TextView
                android:id="@+id/totalMarked"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginRight="@dimen/profile_font_statistic_margin_right"
                android:text="TextView"
                android:textSize="@dimen/profile_font_statistic_table" />
          </TableRow>
        </TableLayout>
      </androidx.cardview.widget.CardView>

      <TextView
          android:id="@+id/textView3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Statistics"
          android:textSize="@dimen/profile_font_statistic_titel"
          app:layout_constraintBottom_toTopOf="@+id/cardView2"
          app:layout_constraintEnd_toEndOf="@+id/cardView2"
          app:layout_constraintStart_toStartOf="@+id/cardView2"
          app:layout_constraintTop_toBottomOf="@+id/textEmail"
          app:layout_constraintVertical_bias="0.71000004" />

      <Button
          android:id="@+id/btn_logout"
          android:layout_width="154dp"
          android:layout_height="52dp"
          android:layout_marginTop="10dp"
          android:text="@string/log_out"
          android:textSize="@dimen/font_size_big_btn"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/cardView2"
          app:layout_constraintVertical_bias="0.120000005" />

      <Button
          android:id="@+id/btn_remove_user"
          android:layout_width="154dp"
          android:layout_height="52dp"
          android:layout_marginTop="30dp"
          android:backgroundTint="@color/red"
          android:text="@string/delete_account"
          android:textColor="@color/white"
          android:textSize="@dimen/font_size_big_btn"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/btn_logout"
          app:layout_constraintVertical_bias="0.0" />

      <com.google.android.material.floatingactionbutton.FloatingActionButton
          android:id="@+id/btn_edit"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:backgroundTint="@color/green"
          android:clickable="true"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.913"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintVertical_bias="0.973"
          app:srcCompat="@drawable/ic_edit" />


    </androidx.constraintlayout.widget.ConstraintLayout>

  </androidx.core.widget.NestedScrollView>

  <com.google.android.material.bottomnavigation.BottomNavigationView
      android:id="@+id/bottomNavigationView"
      android:layout_width="match_parent"
      android:layout_height="75dp"
      app:itemIconTint="@color/colorPrimary"
      app:itemTextColor="@color/white"
      app:labelVisibilityMode="labeled"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:menu="@menu/bottom_nav_menu">

  </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>