<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.profile.edit.profile.ProfileEditView">

  <androidx.core.widget.NestedScrollView
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginBottom="55dp"
      android:fillViewport="true"
      app:layout_constraintBottom_toBottomOf="@+id/bottomNavigationView"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <ProgressBar
          android:id="@+id/progressBar_profile"
          style="@style/Widget.AppCompat.ProgressBar"
          android:layout_width="196dp"
          android:layout_height="96dp"
          app:layout_constraintBottom_toTopOf="@+id/btnUpdate_profile"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.497"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/btn_ChangePassword"
          app:layout_constraintVertical_bias="0.55" />

      <ImageView
          android:id="@+id/avatar"
          android:layout_width="94dp"
          android:layout_height="79dp"
          android:layout_marginTop="30dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.04"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          tools:src="@mipmap/avatar" />


      <com.google.android.material.floatingactionbutton.FloatingActionButton
          android:id="@+id/btnRemoveAvatar"
          android:layout_width="32dp"
          android:layout_height="31dp"
          android:layout_marginStart="76dp"
          android:layout_marginBottom="60dp"
          android:backgroundTint="@color/red"
          android:clickable="true"
          android:scaleType="fitCenter"
          android:scaleX="1"
          android:scaleY="1"
          app:fabCustomSize="30dp"
          app:fabSize="normal"
          app:layout_constraintBottom_toBottomOf="@+id/avatar"
          app:layout_constraintStart_toStartOf="@+id/avatar"
          app:maxImageSize="20dp"
          app:srcCompat="@drawable/ic_close" />

      <EditText
          android:id="@+id/textEditEmail"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/space_between_fields"
          android:ems="10"
          android:hint="@string/register_hint_e_mail"
          android:inputType="textEmailAddress"
          app:layout_constraintEnd_toEndOf="@+id/textEditName"
          app:layout_constraintStart_toStartOf="@+id/textEditName"
          app:layout_constraintTop_toBottomOf="@+id/textEditName" />

      <Button
          android:id="@+id/btnUpdate_profile"
          android:layout_width="114dp"
          android:layout_height="wrap_content"
          android:layout_marginBottom="70dp"
          android:text="@string/profile_btn_update"
          android:textSize="@dimen/font_size_big_btn"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent" />

      <Button
          android:id="@+id/btn_ChangePassword"
          android:layout_width="164dp"
          android:layout_height="45dp"
          android:layout_marginTop="20dp"
          android:layout_marginBottom="127dp"
          android:text="@string/change_password"
          android:textSize="@dimen/font_size_normal_btn"
          app:layout_constraintBottom_toTopOf="@+id/btnUpdate_profile"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.5"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textEditEmail"
          app:layout_constraintVertical_bias="0.19" />

      <EditText
          android:id="@+id/textEditName"
          android:layout_width="0dp"
          android:layout_height="38dp"
          android:layout_marginStart="23dp"
          android:layout_marginTop="45dp"
          android:layout_marginEnd="22dp"
          android:ems="10"
          android:hint="@string/register_hint_name"
          android:inputType="textEmailAddress"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/avatar" />

      <LinearLayout
          android:layout_width="242dp"
          android:layout_height="78dp"
          android:orientation="vertical"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.77"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="@+id/avatar">

        <RadioGroup
            android:id="@+id/toggle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/pink_out_line"
            android:checkedButton="@+id/offer"
            android:orientation="horizontal">

          <RadioButton
              android:id="@+id/gender_man"
              android:layout_width="0dp"
              android:layout_height="match_parent"
              android:layout_marginStart="1dp"
              android:layout_marginTop="1dp"
              android:layout_marginBottom="1dp"
              android:layout_weight="1"
              android:background="@drawable/toggle_widget_background"
              android:button="@null"
              android:fontFamily="sans-serif"
              android:gravity="center"
              android:text="@string/gender_man"
              android:textColor="@color/white"
              android:textSize="32sp" />

          <RadioButton
              android:id="@+id/gender_girl"
              android:layout_width="0dp"
              android:layout_height="match_parent"
              android:layout_marginTop="1dp"
              android:layout_marginEnd="1dp"
              android:layout_marginBottom="1dp"
              android:layout_weight="1"
              android:background="@drawable/toggle_widget_background"
              android:button="@null"
              android:gravity="center"
              android:text="@string/gender_girl"
              android:textColor="@color/white"
              android:textSize="32sp" />
        </RadioGroup>

      </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.core.widget.NestedScrollView>

  <com.google.android.material.bottomnavigation.BottomNavigationView
      android:id="@+id/bottomNavigationView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:itemIconTint="@color/colorPrimary"
      app:itemTextColor="@color/white"
      app:labelVisibilityMode="labeled"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:menu="@menu/bottom_nav_menu">

  </com.google.android.material.bottomnavigation.BottomNavigationView>


</androidx.constraintlayout.widget.ConstraintLayout>